<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a4c4db"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/profil_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:onClick="profil"
        android:text="@string/profil_girisi"
        tools:ignore="RtlHardcoded" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="543dp" />
    <Button
        android:id="@+id/hizliVeriGirisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="speed_data_input"
        android:text="@string/sigara_ictim" />
    <Button
        android:id="@+id/veri_giris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="data_input"
        android:text="@string/veri_girisi" />




</LinearLayout>